# gdata-python-client

./: pyproject.toml  setup.py
src/atom/: client.py  requests.py
