[tool.poetry]
name = "gdata"
version = "12.0.18"
description = "Python client library for Google data APIs"
authors = ["Jeffrey Scudder <j.s@google.com>"]

[tool.poetry.dependencies]
python = "^2.7"
tlslite = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
